# rogue-publisher

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  sonar-project.properties
.github/workflows/: main.yml
include/: gitmanager.h  mainwindow.h
scripts/: build.ps1  build.sh
src/: gitmanager.cpp  main.cpp  mainwindow.cpp
tests/: test_gitmanager.cpp
ui/: mainwindow.ui
